--- a/Week42/exercises_week42.ipynb
+++ b/Week42/exercises_week42.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<u>**Answer:**</u> "
+    "<u>**Answer:**</u> If we are looking at only a single input vector $\\boldsymbol{x}$ passing through the layer at at time, we use the convention of writing $\\boldsymbol{x}$ as an column vector, and the weights-multiplication and addition of bias as: $\\boldsymbol{z} = \\boldsymbol{Wx} + \\boldsymbol{b}$. So, with the wights $\\boldsymbol{W}$ having shape $(10, 4)$, and the bias, $\\boldsymbol{b}$, the shape $(10,)$, the input $\\boldsymbol{x}$ would need to have shape $(4, 1)$, and the output, $\\boldsymbol{z}$, shape $(10, 1)$. Here $\\boldsymbol{b}$ must take the shape $(10, 1)$ to make sense. We can check the dimensions: $(10, 4)(4, 1) + (10, 1) = (10, 1)$. So this layer take a vector with $4$ features as input and then gives a vector with $10$ features as output. The cost function of this "
    ]
   },
   {
@@ -102,13 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def feed_forward_one_layer(W, b, x):\n",
-    "    z = ...\n",
-    "    a = ...\n",
+    "    z = W @ x + b\n",
+    "    a = sigmoid(z)\n",
     "    return a\n",
     "\n",
     "\n",
@@ -116,12 +116,13 @@
     "    predict = feed_forward_one_layer(W, b, x)\n",
     "    return mse(predict, target)\n",
     "\n",
+    "np.random.seed(2025)\n",
     "\n",
-    "x = np.random.rand(2)\n",
-    "target = np.random.rand(3)\n",
+    "x = np.random.rand(2, 2)\n",
+    "target = np.random.rand(3, 1)\n",
     "\n",
-    "W = ...\n",
-    "b = ..."
+    "W = np.random.rand(3, 2)\n",
+    "b = np.random.rand(3, 1)"
    ]
   },
   {
@@ -133,9 +134,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.02077507  0.02738779]\n",
+      " [ 0.03150975  0.04086782]\n",
+      " [ 0.00396977 -0.00137594]] [[0.0400234 ]\n",
+      " [0.06004574]\n",
+      " [0.0011701 ]]\n"
+     ]
+    }
+   ],
    "source": [
     "autograd_one_layer = grad(cost_one_layer, [0, 1])\n",
     "W_g, b_g = autograd_one_layer(W, b, x, target)\n",
@@ -177,14 +190,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<u>**Answer:**</u> The two derivatives $\\dfrac{dC}{da} \\dfrac{da}{dz}$ are present in both calculations and can thus be calculated once and reused per $C$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**b)** What is the derivative of the cost wrt. the final activation? You can use the autograd calculation to make sure you get the correct result. Remember that we compute the mean in mse.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.92374681  0.89763496]\n",
+      " [ 0.7466734   0.91372984]\n",
+      " [-0.09809812  0.15622946]]\n",
+      "[[ 0.1539578   0.14960583]\n",
+      " [ 0.12444557  0.15228831]\n",
+      " [-0.01634969  0.02603824]]\n"
+     ]
+    }
+   ],
    "source": [
     "z = W @ x + b\n",
     "a = sigmoid(z)\n",
@@ -193,7 +226,7 @@
     "\n",
     "\n",
     "def mse_der(predict, target):\n",
-    "    return ...\n",
+    "    return 2*(predict - target)\n",
     "\n",
     "\n",
     "print(mse_der(predict, target))\n",
@@ -210,13 +243,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "<u>**Answer:**</u> For the "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.12742372 0.13639526]\n",
+      " [0.23285651 0.20400633]\n",
+      " [0.2382671  0.19454808]]\n",
+      "[[0.12742372 0.13639526]\n",
+      " [0.23285651 0.20400633]\n",
+      " [0.2382671  0.19454808]]\n"
+     ]
+    }
+   ],
    "source": [
     "def sigmoid_der(z):\n",
-    "    return ...\n",
+    "    a = np.exp(z)/(np.exp(z) + 1)**2\n",
+    "    return a\n",
     "\n",
     "\n",
     "print(sigmoid_der(z))\n",
@@ -238,12 +292,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dC_da = ...\n",
-    "dC_dz = ..."
+    "dC_da = mse_der\n",
+    "dC_dz = sigmoid_der"
    ]
   },
   {
@@ -444,9 +498,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'layers' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[77], line 7\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m mse(predict, target)\n\u001b[0;32m      6\u001b[0m grad_two_layers \u001b[38;5;241m=\u001b[39m grad(cost_two_layers, \u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m----> 7\u001b[0m grad_two_layers(\u001b[43mlayers\u001b[49m, x, target)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'layers' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def cost_two_layers(layers, x, target):\n",
     "    predict = feed_forward_two_layers(layers, x)\n",
