--- a/Week42/exercises_week42.ipynb
+++ b/Week42/exercises_week42.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<u>**Answer:**</u> If we are looking at only a single input vector $\\boldsymbol{x}$ passing through the layer at at time, we use the convention of writing $\\boldsymbol{x}$ as an column vector, and the weights-multiplication and addition of bias as: $\\boldsymbol{z} = \\boldsymbol{Wx} + \\boldsymbol{b}$. So, with the wights $\\boldsymbol{W}$ having shape $(10, 4)$, and the bias, $\\boldsymbol{b}$, the shape $(10,)$, the input $\\boldsymbol{x}$ would need to have shape $(4, 1)$, and the output, $\\boldsymbol{z}$, shape $(10, 1)$. Here $\\boldsymbol{b}$ must take the shape $(10, 1)$ to make sense. We can check the dimensions: $(10, 4)(4, 1) + (10, 1) = (10, 1)$. So this layer take a vector with $4$ features as input and then gives a vector with $10$ features as output. The cost function of this "
+    "<u>**Answer:**</u> If we are looking at only a single input vector $\\boldsymbol{x}$ passing through the layer at at time, we use the convention of writing $\\boldsymbol{x}$ as an column vector, and the weights-multiplication and addition of bias as: $\\boldsymbol{z} = \\boldsymbol{Wx} + \\boldsymbol{b}$. So, with the wights $\\boldsymbol{W}$ having shape $(10, 4)$, and the bias, $\\boldsymbol{b}$, the shape $(10,)$, the input $\\boldsymbol{x}$ would need to have shape $(4, 1)$, and the output, $\\boldsymbol{z}$, shape $(10, 1)$. Here $\\boldsymbol{b}$ must take the shape $(10, 1)$ to make sense. We can check the dimensions: $(10, 4)(4, 1) + (10, 1) = (10, 1)$. So this layer take a vector with $4$ features as input and then gives a vector with $10$ features as output. If we define the cost function to be the sum of the squared error: $(\\boldsymbol{p} - \\boldsymbol{t})^2$, of the prediction $p$ and target $t$, then  "
    ]
   },
   {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
     "\n",
     "np.random.seed(2025)\n",
     "\n",
-    "x = np.random.rand(2, 2)\n",
+    "x = np.random.rand(2, 1)\n",
     "target = np.random.rand(3, 1)\n",
     "\n",
     "W = np.random.rand(3, 2)\n",
@@ -134,18 +134,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.02077507  0.02738779]\n",
-      " [ 0.03150975  0.04086782]\n",
-      " [ 0.00396977 -0.00137594]] [[0.0400234 ]\n",
-      " [0.06004574]\n",
-      " [0.0011701 ]]\n"
+      "[[-0.00180344 -0.01181792]\n",
+      " [ 0.0050257   0.03293334]\n",
+      " [ 0.00605946  0.03970756]] [[-0.01331069]\n",
+      " [ 0.03709329]\n",
+      " [ 0.04472319]]\n"
      ]
     }
    ],
@@ -202,19 +202,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.92374681  0.89763496]\n",
-      " [ 0.7466734   0.91372984]\n",
-      " [-0.09809812  0.15622946]]\n",
-      "[[ 0.1539578   0.14960583]\n",
-      " [ 0.12444557  0.15228831]\n",
-      " [-0.01634969  0.02603824]]\n"
+      "[[-0.08488618]\n",
+      " [ 0.18564413]\n",
+      " [ 0.2630518 ]]\n",
+      "[[-0.08488618]\n",
+      " [ 0.18564413]\n",
+      " [ 0.2630518 ]]\n"
      ]
     }
    ],
@@ -226,7 +226,7 @@
     "\n",
     "\n",
     "def mse_der(predict, target):\n",
-    "    return 2*(predict - target)\n",
+    "    return 2*(predict - target)/np.size(predict)    \n",
     "\n",
     "\n",
     "print(mse_der(predict, target))\n",
@@ -251,19 +251,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.12742372 0.13639526]\n",
-      " [0.23285651 0.20400633]\n",
-      " [0.2382671  0.19454808]]\n",
-      "[[0.12742372 0.13639526]\n",
-      " [0.23285651 0.20400633]\n",
-      " [0.2382671  0.19454808]]\n"
+      "[[0.15680634]\n",
+      " [0.19980861]\n",
+      " [0.17001667]]\n",
+      "[[0.15680634]\n",
+      " [0.19980861]\n",
+      " [0.17001667]]\n"
      ]
     }
    ],
@@ -292,12 +292,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.01331069]\n",
+      " [ 0.03709329]\n",
+      " [ 0.04472319]]\n"
+     ]
+    }
+   ],
    "source": [
-    "dC_da = mse_der\n",
-    "dC_dz = sigmoid_der"
+    "dC_da = mse_der(predict, target)\n",
+    "dC_dz = dC_da*sigmoid_der(z)\n",
+    "\n",
+    "print(dC_dz)"
    ]
   },
   {
@@ -316,14 +328,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.00180344 -0.01181792]\n",
+      " [ 0.0050257   0.03293334]\n",
+      " [ 0.00605946  0.03970756]] [[-0.01331069]\n",
+      " [ 0.03709329]\n",
+      " [ 0.04472319]]\n"
+     ]
+    }
+   ],
    "source": [
-    "dC_da = ...\n",
-    "dC_dz = ...\n",
-    "dC_dW = ...\n",
-    "dC_db = ...\n",
+    "dC_da = mse_der(predict, target)\n",
+    "dC_dz = dC_da*sigmoid_der(z)\n",
+    "dC_dW = dC_dz @ x.T\n",
+    "dC_db = dC_dz*1\n",
     "\n",
     "print(dC_dW, dC_db)"
    ]
@@ -337,9 +361,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.00180344 -0.01181792]\n",
+      " [ 0.0050257   0.03293334]\n",
+      " [ 0.00605946  0.03970756]] [[-0.01331069]\n",
+      " [ 0.03709329]\n",
+      " [ 0.04472319]]\n"
+     ]
+    }
+   ],
    "source": [
     "W_g, b_g = autograd_one_layer(W, b, x, target)\n",
     "print(W_g, b_g)"
@@ -361,25 +397,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.random.rand(2)\n",
-    "target = np.random.rand(4)\n",
+    "x = np.random.rand(2, 1)\n",
+    "target = np.random.rand(4, 1)\n",
     "\n",
     "W1 = np.random.rand(3, 2)\n",
-    "b1 = np.random.rand(3)\n",
+    "b1 = np.random.rand(3, 1)\n",
     "\n",
     "W2 = np.random.rand(4, 3)\n",
-    "b2 = np.random.rand(4)\n",
+    "b2 = np.random.rand(4, 1)\n",
     "\n",
     "layers = [(W1, b1), (W2, b2)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,14 +436,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dC_da2 = ...\n",
-    "dC_dz2 = ...\n",
-    "dC_dW2 = ...\n",
-    "dC_db2 = ..."
+    "dC_da2 = 2*(a2 - target)\n",
+    "dC_dz2 = dC_da2 * sigmoid_der(z2)\n",
+    "dC_dW2 = dC_dz2 @ a2.T\n",
+    "dC_db2 = dC_dz2 * 1"
    ]
   },
   {
@@ -426,13 +462,6 @@
     "\\frac{dz_2}{da_1}\n",
     "$$\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -498,21 +527,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'layers' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[77], line 7\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m mse(predict, target)\n\u001b[0;32m      6\u001b[0m grad_two_layers \u001b[38;5;241m=\u001b[39m grad(cost_two_layers, \u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m----> 7\u001b[0m grad_two_layers(\u001b[43mlayers\u001b[49m, x, target)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'layers' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def cost_two_layers(layers, x, target):\n",
     "    predict = feed_forward_two_layers(layers, x)\n",
