--- a/Week42/exercises_week42.ipynb
+++ b/Week42/exercises_week42.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -201,8 +201,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<u>**Answer:**</u> The derivative of the cost function (for one input) with respect to the final activation is $\\dfrac{dC}{da} = 2(p - t)$."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -246,12 +253,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<u>**Answer:**</u> For the "
+    "<u>**Answer:**</u> For the sigmoid activation function the derivative is $\\dfrac{da}{dz} = \\dfrac{d\\sigma(z)}{dz} = \\sigma'(z) = \\dfrac{e^z}{(e^z + 1)^2}$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -323,12 +330,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<u>**Answer:**</u> $\\dfrac{dz}{dW} = x$ and will have the shape $x^T$, and $\\dfrac{dz}{db} = 1$ and will have the shape $(1, 1)$ thus a scalar."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**f)** Now combine the expressions you have worked with so far to compute the gradients! Note that you always need to do a feed forward pass while saving the zs and as before you do backpropagation, as they are used in the derivative expressions\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,14 +450,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "dC_da2 = 2*(a2 - target)\n",
-    "dC_dz2 = dC_da2 * sigmoid_der(z2)\n",
-    "dC_dW2 = dC_dz2 @ a2.T\n",
-    "dC_db2 = dC_dz2 * 1"
+    "da_dz2 = sigmoid_der(z2)\n",
+    "dC_dz2 = dC_da2 * da_dz2\n",
+    "\n",
+    "dz_dW2 = a1.T\n",
+    "dC_dW2 = dC_dz2 @ dz_dW2\n",
+    "\n",
+    "dz_db2 = 1.0\n",
+    "dC_db2 = dC_dz2 * dz_db2"
    ]
   },
   {
