--- a/Week43/exercises_week43.ipynb
+++ b/Week43/exercises_week43.ipynb
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "be9ff0b9",
    "metadata": {
     "collapsed": false,
@@ -459,7 +459,16 @@
     "import numpy as np\n",
     "from sklearn.model_selection import  train_test_split \n",
     "# from sklearn.datasets import fill in the data set\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.linear_model import LogisticRegression\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "498e25de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Load the data, fill inn\n",
     "mydata.data = ?\n",
@@ -517,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "d20bb8be",
    "metadata": {
     "collapsed": false,
@@ -540,7 +549,7 @@
     "editable": true
    },
    "source": [
-    "Alternatively, you can use the _make$\\_$classification_\n",
+    "Alternatively, you can use the *make_classification*\n",
     "functionality. This function generates a random $n$-class classification\n",
     "dataset, which can be configured for binary classification by setting\n",
     "n_classes=2. You can also control the number of samples, features,\n",
@@ -549,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d271f0ba",
    "metadata": {
     "collapsed": false,
@@ -625,7 +634,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -639,7 +648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
