--- a/Week42/exercises_week42.ipynb
+++ b/Week42/exercises_week42.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -209,16 +209,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.08488618]\n",
-      " [ 0.18564413]\n",
-      " [ 0.2630518 ]]\n",
+      "[[-0.25465853]\n",
+      " [ 0.55693238]\n",
+      " [ 0.78915541]]\n",
       "[[-0.08488618]\n",
       " [ 0.18564413]\n",
       " [ 0.2630518 ]]\n"
@@ -233,7 +233,7 @@
     "\n",
     "\n",
     "def mse_der(predict, target):\n",
-    "    return 2*(predict - target)/np.size(predict)    \n",
+    "    return 2*(predict - target)   \n",
     "\n",
     "\n",
     "print(mse_der(predict, target))\n",
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -299,16 +299,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.01331069]\n",
-      " [ 0.03709329]\n",
-      " [ 0.04472319]]\n"
+      "[[-0.03993207]\n",
+      " [ 0.11127988]\n",
+      " [ 0.13416957]]\n"
      ]
     }
    ],
@@ -342,18 +342,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.00180344 -0.01181792]\n",
-      " [ 0.0050257   0.03293334]\n",
-      " [ 0.00605946  0.03970756]] [[-0.01331069]\n",
-      " [ 0.03709329]\n",
-      " [ 0.04472319]]\n"
+      "[[-0.00541032 -0.03545376]\n",
+      " [ 0.01507711  0.09880003]\n",
+      " [ 0.01817839  0.11912268]] [[-0.03993207]\n",
+      " [ 0.11127988]\n",
+      " [ 0.13416957]]\n"
      ]
     }
    ],
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,19 +450,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "dC_da2 = 2*(a2 - target)\n",
-    "da_dz2 = sigmoid_der(z2)\n",
-    "dC_dz2 = dC_da2 * da_dz2\n",
+    "da2_dz2 = sigmoid_der(z2)\n",
+    "dC_dz2 = dC_da2 * da2_dz2\n",
     "\n",
-    "dz_dW2 = a1.T\n",
-    "dC_dW2 = dC_dz2 @ dz_dW2\n",
+    "dz2_dW2 = a1.T\n",
+    "dC_dW2 = dC_dz2 @ dz2_dW2\n",
     "\n",
-    "dz_db2 = 1.0\n",
-    "dC_db2 = dC_dz2 * dz_db2"
+    "dz2_db2 = 1.0\n",
+    "dC_db2 = dC_dz2 * dz2_db2"
    ]
   },
   {
@@ -499,21 +499,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 1) (4, 3) (3, 1) (2, 1) (3, 2)\n"
+     ]
+    }
+   ],
    "source": [
-    "dC_da1 = ...\n",
-    "dC_dz1 = ...\n",
-    "dC_dW1 = ...\n",
-    "dC_db1 = ..."
+    "dz2_da1 = W2\n",
+    "da1_dz1 = sigmoid_der(z1)\n",
+    "dz1_dW1 = x\n",
+    "\n",
+    "# Taking the shapes into consideration\n",
+    "\n",
+    "dC_dW1 = dC_dz2 \n",
+    "\n",
+    "print(dC_dz2.shape, dz2_da1.shape, da1_dz1.shape, dz1_dW1.shape, W1.shape)\n",
+    "\n",
+    "\n",
+    "# dC_da1 = W2.T @ 2*(a2 - target)*sigmoid_der(z2)\n",
+    "# da1_dz1 = sigmoid_der(z1)\n",
+    "\n",
+    "# dC_dz1 = dC_da1 @ da1_dz1\n",
+    "# dz1_dW1 =  x.T\n",
+    "\n",
+    "# dC_dW1 = dC_dz1 @ dz1_dW1\n",
+    "\n",
+    "# dC_db1 = 1.0\n",
+    "\n",
+    "# dC_db1 = dC_dz1*dC_db1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 2)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dC_dW1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5.91499026e-05  5.46168696e-03]\n",
+      " [-1.75152604e-05 -1.61729546e-03]\n",
+      " [ 1.50357711e-04  1.38834844e-02]\n",
+      " [ 2.36347875e-04  2.18235035e-02]] [[ 0.0186527 ]\n",
+      " [-0.00552337]\n",
+      " [ 0.04741475]\n",
+      " [ 0.07453143]]\n",
+      "[[ 0.03782975  0.03766907  0.0359616 ]\n",
+      " [-0.01045066 -0.01040628 -0.00993458]\n",
+      " [ 0.0850712   0.08470987  0.08087011]\n",
+      " [ 0.09054602  0.09016144  0.08607457]] [[ 0.05924549]\n",
+      " [-0.01636688]\n",
+      " [ 0.13323073]\n",
+      " [ 0.14180489]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(dC_dW1, dC_db1)\n",
     "print(dC_dW2, dC_db2)"
@@ -528,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,9 +613,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(array([[2.94888128e-05, 2.72288976e-03],\n",
+       "         [2.25919845e-05, 2.08606171e-03],\n",
+       "         [5.50042596e-05, 5.07889336e-03]]),\n",
+       "  array([[0.00929919],\n",
+       "         [0.0071243 ],\n",
+       "         [0.01734539]])),\n",
+       " (array([[ 0.00945744,  0.00941727,  0.0089904 ],\n",
+       "         [-0.00261267, -0.00260157, -0.00248364],\n",
+       "         [ 0.0212678 ,  0.02117747,  0.02021753],\n",
+       "         [ 0.0226365 ,  0.02254036,  0.02151864]]),\n",
+       "  array([[ 0.01481137],\n",
+       "         [-0.00409172],\n",
+       "         [ 0.03330768],\n",
+       "         [ 0.03545122]]))]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def cost_two_layers(layers, x, target):\n",
     "    predict = feed_forward_two_layers(layers, x)\n",
