--- a/Week42/exercises_week42.ipynb
+++ b/Week42/exercises_week42.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,9 +450,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 1) (4, 1) (1, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "dC_da2 = 2*(a2 - target)\n",
     "da2_dz2 = sigmoid_der(z2)\n",
@@ -462,7 +470,9 @@
     "dC_dW2 = dC_dz2 @ dz2_dW2\n",
     "\n",
     "dz2_db2 = 1.0\n",
-    "dC_db2 = dC_dz2 * dz2_db2"
+    "dC_db2 = dC_dz2 * dz2_db2\n",
+    "\n",
+    "print(dC_da2.shape, da2_dz2.shape, dz2_dW2.shape)"
    ]
   },
   {
@@ -499,7 +509,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delta2 = dC_da2*sigmoid_der(z2)\n",
+    "delta1 = (W2.T @ delta2)*sigmoid_der(z1)\n",
+    "\n",
+    "dC_b1 = delta1\n",
+    "dC_dW1 = a1*delta1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -508,6 +531,17 @@
      "text": [
       "(4, 1) (4, 3) (3, 1) (2, 1) (3, 2)\n"
      ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 1 is different from 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(dC_dz2\u001b[38;5;241m.\u001b[39mshape, dz2_da1\u001b[38;5;241m.\u001b[39mshape, da1_dz1\u001b[38;5;241m.\u001b[39mshape, dz1_dW1\u001b[38;5;241m.\u001b[39mshape, W1\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Taking the shapes into consideration, want shape of W1\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m dC_dW1_1 \u001b[38;5;241m=\u001b[39m (\u001b[43mdz2_da1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mT\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m@\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mdC_dz2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mT\u001b[49m \u001b[38;5;241m*\u001b[39m da1_dz1) \u001b[38;5;241m@\u001b[39m dz1_dW1\u001b[38;5;241m.\u001b[39mT\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(dC_dW1_1)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# dC_dW1_2 = dC_dz2 * dz2_da1 * da1_dz1 * dz1_dW1.T\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \n\u001b[0;32m     13\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     24\u001b[0m \n\u001b[0;32m     25\u001b[0m \u001b[38;5;66;03m# dC_db1 = dC_dz1*dC_db1\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 1 is different from 4)"
+     ]
     }
    ],
    "source": [
@@ -515,11 +549,14 @@
     "da1_dz1 = sigmoid_der(z1)\n",
     "dz1_dW1 = x\n",
     "\n",
-    "# Taking the shapes into consideration\n",
-    "\n",
-    "dC_dW1 = dC_dz2 \n",
-    "\n",
     "print(dC_dz2.shape, dz2_da1.shape, da1_dz1.shape, dz1_dW1.shape, W1.shape)\n",
+    "# Taking the shapes into consideration, want shape of W1\n",
+    "\n",
+    "dC_dW1_1 = (dz2_da1.T @ dC_dz2.T * da1_dz1) @ dz1_dW1.T\n",
+    "print(dC_dW1_1)\n",
+    "\n",
+    "# dC_dW1_2 = dC_dz2 * dz2_da1 * da1_dz1 * dz1_dW1.T\n",
+    "\n",
     "\n",
     "\n",
     "# dC_da1 = W2.T @ 2*(a2 - target)*sigmoid_der(z2)\n",
@@ -537,16 +574,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "da1_dz1 = sigmoid_der(z1)\n",
+    "dC_dz1 = (W2.T @ dC_dz2) * da1_dz1\n",
+    "dC_dW1 = dC_dz1 @ x.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4, 2)"
+       "(3, 2)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,27 +605,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 5.91499026e-05  5.46168696e-03]\n",
-      " [-1.75152604e-05 -1.61729546e-03]\n",
-      " [ 1.50357711e-04  1.38834844e-02]\n",
-      " [ 2.36347875e-04  2.18235035e-02]] [[ 0.0186527 ]\n",
-      " [-0.00552337]\n",
-      " [ 0.04741475]\n",
-      " [ 0.07453143]]\n",
-      "[[ 0.03782975  0.03766907  0.0359616 ]\n",
-      " [-0.01045066 -0.01040628 -0.00993458]\n",
-      " [ 0.0850712   0.08470987  0.08087011]\n",
-      " [ 0.09054602  0.09016144  0.08607457]] [[ 0.05924549]\n",
-      " [-0.01636688]\n",
-      " [ 0.13323073]\n",
-      " [ 0.14180489]]\n"
+     "ename": "NameError",
+     "evalue": "name 'dC_db1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[33], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(dC_dW1, \u001b[43mdC_db1\u001b[49m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(dC_dW2, dC_db2)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'dC_db1' is not defined"
      ]
     }
    ],
@@ -595,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,29 +652,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(array([[2.94888128e-05, 2.72288976e-03],\n",
-       "         [2.25919845e-05, 2.08606171e-03],\n",
-       "         [5.50042596e-05, 5.07889336e-03]]),\n",
-       "  array([[0.00929919],\n",
-       "         [0.0071243 ],\n",
-       "         [0.01734539]])),\n",
-       " (array([[ 0.00945744,  0.00941727,  0.0089904 ],\n",
-       "         [-0.00261267, -0.00260157, -0.00248364],\n",
-       "         [ 0.0212678 ,  0.02117747,  0.02021753],\n",
-       "         [ 0.0226365 ,  0.02254036,  0.02151864]]),\n",
-       "  array([[ 0.01481137],\n",
-       "         [-0.00409172],\n",
-       "         [ 0.03330768],\n",
-       "         [ 0.03545122]]))]"
+       "[(array([[0.00985641, 0.00321614],\n",
+       "         [0.00731526, 0.00238697],\n",
+       "         [0.00615236, 0.00200751]]),\n",
+       "  array([[0.01162408],\n",
+       "         [0.0086272 ],\n",
+       "         [0.00725574]])),\n",
+       " (array([[0.02413178, 0.02572024, 0.02713663],\n",
+       "         [0.01693828, 0.01805323, 0.01904741],\n",
+       "         [0.01370249, 0.01460444, 0.0154087 ],\n",
+       "         [0.00935372, 0.00996942, 0.01051843]]),\n",
+       "  array([[0.0331635 ],\n",
+       "         [0.02327772],\n",
+       "         [0.01883087],\n",
+       "         [0.01285451]]))]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,6 +687,28 @@
     "\n",
     "grad_two_layers = grad(cost_two_layers, 0)\n",
     "grad_two_layers(layers, x, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.03383356],\n",
+       "       [0.02676359],\n",
+       "       [0.02374856]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dC_dW1"
    ]
   },
   {
