--- a/NN_test_accuracy.ipynb
+++ b/NN_test_accuracy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "8bd198ca",
    "metadata": {},
    "outputs": [],
@@ -42,9 +42,9 @@
     "def feed_forward_batch(inputs, layers, activation_funcs):\n",
     "    a = inputs\n",
     "    for (W, b), activation_func in zip(layers, activation_funcs):\n",
-    "        # print(np.shape(a))\n",
-    "        # print(np.shape(W))\n",
-    "        # print(np.shape(b))\n",
+    "        print(np.shape(a))\n",
+    "        print(np.shape(W))\n",
+    "        print(np.shape(b))\n",
     "        z = a @ W + b\n",
     "        a = activation_func(z)\n",
     "    return a\n",
@@ -59,11 +59,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "215efa51",
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.random.seed(2025)\n",
+    "\n",
     "n = 1000\n",
     "x = np.linspace(-1, 1, n)\n",
     "targets = Runge_func(x) + np.random.normal(0, 0.1, size=n)\n",
@@ -81,7 +83,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
+   "id": "12112932",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def config_network(input_shape, num_hidden_layers, num_nodes_layers, num_output_targets, activation_func_hidden, activation_func_output):\n",
+    "    \"\"\" \n",
+    "    Take: input_shape, shape of input matrix: (samples, features),\n",
+    "    num_hidden_layers, number of hidden layers,\n",
+    "    num_nodes_layers, number of nodes in the hidden layers\n",
+    "    output_targets, number of targets to predict\n",
+    "    Return: list of layers where each element is number of nodes in layer corresponding to index, last element is output layer,\n",
+    "    and list of activation function for each layer.\n",
+    "    \"\"\"\n",
+    "    layer_output_sizes = [num_nodes_layers]*num_hidden_layers + [num_output_targets]\n",
+    "    activation_funcs = [activation_func_hidden]*num_hidden_layers + [activation_func_output]\n",
+    "\n",
+    "    return layer_output_sizes, activation_funcs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a5950c2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 8, 8, 8, 3]\n",
+      "[<function ReLU at 0x0000015A7AD7D1C0>, <function ReLU at 0x0000015A7AD7D1C0>, <function ReLU at 0x0000015A7AD7D1C0>, <function ReLU at 0x0000015A7AD7D1C0>, <function sigmoid at 0x0000015A00C30E00>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "aa, bb = config_network(1, 4, 8, 3, ReLU, sigmoid)\n",
+    "print(aa)\n",
+    "print(bb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "e778cbdc",
    "metadata": {},
    "outputs": [
@@ -90,43 +135,97 @@
      "output_type": "stream",
      "text": [
       "[1]\n",
-      "(800, 1)\n",
       "[1]\n",
-      "(800, 1)\n",
       "[1]\n",
-      "(800, 1)\n",
       "[1]\n",
-      "(800, 1)\n",
       "[5, 1]\n",
-      "(800, 5)\n",
+      "(800, 1)\n",
+      "(1, 5)\n",
+      "(800, 1)\n",
       "[10, 1]\n",
-      "(800, 10)\n",
+      "(800, 1)\n",
+      "(1, 10)\n",
+      "(800, 1)\n",
       "[25, 1]\n",
-      "(800, 25)\n",
+      "(800, 1)\n",
+      "(1, 25)\n",
+      "(800, 1)\n",
       "[20, 1]\n",
-      "(800, 20)\n",
+      "(800, 1)\n",
+      "(1, 20)\n",
+      "(800, 1)\n",
       "[5, 5, 1]\n",
+      "(800, 1)\n",
+      "(1, 5)\n",
+      "(800, 1)\n",
       "(800, 5)\n",
+      "(5, 5)\n",
+      "(800, 1)\n",
       "[10, 10, 1]\n",
+      "(800, 1)\n",
+      "(1, 10)\n",
+      "(800, 1)\n",
       "(800, 10)\n",
+      "(10, 10)\n",
+      "(800, 1)\n",
       "[25, 25, 1]\n",
+      "(800, 1)\n",
+      "(1, 25)\n",
+      "(800, 1)\n",
       "(800, 25)\n",
+      "(25, 25)\n",
+      "(800, 1)\n",
       "[20, 20, 1]\n",
+      "(800, 1)\n",
+      "(1, 20)\n",
+      "(800, 1)\n",
       "(800, 20)\n",
+      "(20, 20)\n",
+      "(800, 1)\n",
       "[5, 5, 5, 1]\n",
+      "(800, 1)\n",
+      "(1, 5)\n",
+      "(800, 1)\n",
       "(800, 5)\n",
+      "(5, 5)\n",
+      "(800, 1)\n",
+      "(800, 5)\n",
+      "(5, 5)\n",
+      "(800, 1)\n",
       "[10, 10, 10, 1]\n",
+      "(800, 1)\n",
+      "(1, 10)\n",
+      "(800, 1)\n",
       "(800, 10)\n",
+      "(10, 10)\n",
+      "(800, 1)\n",
+      "(800, 10)\n",
+      "(10, 10)\n",
+      "(800, 1)\n",
       "[25, 25, 25, 1]\n",
+      "(800, 1)\n",
+      "(1, 25)\n",
+      "(800, 1)\n",
       "(800, 25)\n",
+      "(25, 25)\n",
+      "(800, 1)\n",
+      "(800, 25)\n",
+      "(25, 25)\n",
+      "(800, 1)\n",
       "[20, 20, 20, 1]\n",
-      "(800, 20)\n"
+      "(800, 1)\n",
+      "(1, 20)\n",
+      "(800, 1)\n",
+      "(800, 20)\n",
+      "(20, 20)\n",
+      "(800, 1)\n",
+      "(800, 20)\n",
+      "(20, 20)\n",
+      "(800, 1)\n"
      ]
     }
    ],
    "source": [
-    "np.random.seed(2025)\n",
-    "\n",
     "inputs = x_train_s\n",
     "network_input_size = (x_train_s.shape[0], 1) # (individual samples, features)\n",
     "\n",
@@ -145,7 +244,7 @@
     "\n",
     " \n",
     "        predictions = feed_forward_batch(inputs, layers, activation_funcs)\n",
-    "        print(predictions.shape)\n",
+    "\n",
     "        # accuracy = mean_squared_error(predictions, t_train)\n",
     "        # # nn_trainpredict_accuracy_matrix = "
    ]
