--- a/NN_test_accuracy.ipynb
+++ b/NN_test_accuracy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "8bd198ca",
    "metadata": {},
    "outputs": [],
@@ -15,16 +15,70 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "16ed38a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def Runge_func(x):\n",
-    "    return 1.0/(1 + 25*x**2)\n",
-    "\n",
+    "    return 1.0/(1 + 25*x**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a28dd6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def ReLU(z):\n",
     "    return np.where(z > 0, z, 0)\n",
     "\n",
     "def sigmoid(z):\n",
     "    return 1 / (1 + np.exp(-z))\n",
+    "\n",
+    "def mse(predict, target):\n",
+    "    return np.mean((predict - target) ** 2)\n",
+    "\n",
+    "def cross_entropy(predict, target):\n",
+    "    return np.sum(-target * np.log(predict))\n",
+    "\n",
+    "def cost_mse(input, layers, activation_funcs, target):\n",
+    "    predict = feed_forward_batch(input, layers, activation_funcs)\n",
+    "    return mse(predict, target)\n",
+    "\n",
+    "def cost_cross_entropy(input, layers, activation_funcs, target):\n",
+    "    predict = feed_forward_batch(input, layers, activation_funcs)\n",
+    "    return cross_entropy(predict, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "c7f48d84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def config_network(num_hidden_layers, num_nodes_hlayers, num_output_targets, activation_func_hlayers, activation_func_output):\n",
+    "    \"\"\" \n",
+    "    Take: num_hidden_layers, number of hidden layers,\n",
+    "    num_nodes_hlayers, number of nodes in the hidden layers,\n",
+    "    output_targets, number of targets to predict,\n",
+    "    activation_func_hlayers, activation function used in the hidden layers,\n",
+    "    activation_func_output, activation function for the output layer (can be linear and non linear).\n",
+    "    \n",
+    "    Return: list of layers where each element is number of nodes in layer corresponding to index, last element is output layer,\n",
+    "    and list of activation function for each layer.\n",
+    "    \"\"\"\n",
+    "    layer_output_sizes = [num_nodes_hlayers]*num_hidden_layers + [num_output_targets]\n",
+    "    activation_funcs = [activation_func_hlayers]*num_hidden_layers + [activation_func_output]\n",
+    "\n",
+    "    return layer_output_sizes, activation_funcs\n",
     "\n",
     "def create_layers_batch(network_input_shape, layer_output_sizes):\n",
     "    # network_input_shape has shape (number of input vectors, features)\n",
@@ -59,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "215efa51",
    "metadata": {},
    "outputs": [],
@@ -83,50 +137,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "id": "12112932",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def config_network(input_shape, num_hidden_layers, num_nodes_layers, num_output_targets, activation_func_hidden, activation_func_output):\n",
-    "    \"\"\" \n",
-    "    Take: input_shape, shape of input matrix: (samples, features),\n",
-    "    num_hidden_layers, number of hidden layers,\n",
-    "    num_nodes_layers, number of nodes in the hidden layers\n",
-    "    output_targets, number of targets to predict\n",
-    "    Return: list of layers where each element is number of nodes in layer corresponding to index, last element is output layer,\n",
-    "    and list of activation function for each layer.\n",
-    "    \"\"\"\n",
-    "    layer_output_sizes = [num_nodes_layers]*num_hidden_layers + [num_output_targets]\n",
-    "    activation_funcs = [activation_func_hidden]*num_hidden_layers + [activation_func_output]\n",
+    "from autograd import grad\n",
     "\n",
-    "    return layer_output_sizes, activation_funcs"
+    "gradient_func = grad(cost_mse, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "a5950c2a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[8, 8, 8, 8, 3]\n",
-      "[<function ReLU at 0x0000015A7AD7D1C0>, <function ReLU at 0x0000015A7AD7D1C0>, <function ReLU at 0x0000015A7AD7D1C0>, <function ReLU at 0x0000015A7AD7D1C0>, <function sigmoid at 0x0000015A00C30E00>]\n"
-     ]
-    }
-   ],
-   "source": [
-    "aa, bb = config_network(1, 4, 8, 3, ReLU, sigmoid)\n",
-    "print(aa)\n",
-    "print(bb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e778cbdc",
    "metadata": {},
    "outputs": [
@@ -135,24 +158,48 @@
      "output_type": "stream",
      "text": [
       "[1]\n",
+      "(800, 1)\n",
+      "(1, 1)\n",
+      "(800, 1)\n",
       "[1]\n",
+      "(800, 1)\n",
+      "(1, 1)\n",
+      "(800, 1)\n",
       "[1]\n",
+      "(800, 1)\n",
+      "(1, 1)\n",
+      "(800, 1)\n",
       "[1]\n",
+      "(800, 1)\n",
+      "(1, 1)\n",
+      "(800, 1)\n",
       "[5, 1]\n",
       "(800, 1)\n",
       "(1, 5)\n",
+      "(800, 1)\n",
+      "(800, 5)\n",
+      "(5, 1)\n",
       "(800, 1)\n",
       "[10, 1]\n",
       "(800, 1)\n",
       "(1, 10)\n",
       "(800, 1)\n",
+      "(800, 10)\n",
+      "(10, 1)\n",
+      "(800, 1)\n",
       "[25, 1]\n",
       "(800, 1)\n",
       "(1, 25)\n",
       "(800, 1)\n",
+      "(800, 25)\n",
+      "(25, 1)\n",
+      "(800, 1)\n",
       "[20, 1]\n",
       "(800, 1)\n",
       "(1, 20)\n",
+      "(800, 1)\n",
+      "(800, 20)\n",
+      "(20, 1)\n",
       "(800, 1)\n",
       "[5, 5, 1]\n",
       "(800, 1)\n",
@@ -161,12 +208,18 @@
       "(800, 5)\n",
       "(5, 5)\n",
       "(800, 1)\n",
+      "(800, 5)\n",
+      "(5, 1)\n",
+      "(800, 1)\n",
       "[10, 10, 1]\n",
       "(800, 1)\n",
       "(1, 10)\n",
       "(800, 1)\n",
       "(800, 10)\n",
       "(10, 10)\n",
+      "(800, 1)\n",
+      "(800, 10)\n",
+      "(10, 1)\n",
       "(800, 1)\n",
       "[25, 25, 1]\n",
       "(800, 1)\n",
@@ -175,12 +228,18 @@
       "(800, 25)\n",
       "(25, 25)\n",
       "(800, 1)\n",
+      "(800, 25)\n",
+      "(25, 1)\n",
+      "(800, 1)\n",
       "[20, 20, 1]\n",
       "(800, 1)\n",
       "(1, 20)\n",
       "(800, 1)\n",
       "(800, 20)\n",
       "(20, 20)\n",
+      "(800, 1)\n",
+      "(800, 20)\n",
+      "(20, 1)\n",
       "(800, 1)\n",
       "[5, 5, 5, 1]\n",
       "(800, 1)\n",
@@ -192,6 +251,9 @@
       "(800, 5)\n",
       "(5, 5)\n",
       "(800, 1)\n",
+      "(800, 5)\n",
+      "(5, 1)\n",
+      "(800, 1)\n",
       "[10, 10, 10, 1]\n",
       "(800, 1)\n",
       "(1, 10)\n",
@@ -201,6 +263,9 @@
       "(800, 1)\n",
       "(800, 10)\n",
       "(10, 10)\n",
+      "(800, 1)\n",
+      "(800, 10)\n",
+      "(10, 1)\n",
       "(800, 1)\n",
       "[25, 25, 25, 1]\n",
       "(800, 1)\n",
@@ -212,6 +277,9 @@
       "(800, 25)\n",
       "(25, 25)\n",
       "(800, 1)\n",
+      "(800, 25)\n",
+      "(25, 1)\n",
+      "(800, 1)\n",
       "[20, 20, 20, 1]\n",
       "(800, 1)\n",
       "(1, 20)\n",
@@ -221,6 +289,9 @@
       "(800, 1)\n",
       "(800, 20)\n",
       "(20, 20)\n",
+      "(800, 1)\n",
+      "(800, 20)\n",
+      "(20, 1)\n",
       "(800, 1)\n"
      ]
     }
@@ -232,17 +303,24 @@
     "hidden_layers = [0, 1, 2, 3]\n",
     "nodes_hlayer = [5, 10, 25, 20]\n",
     "\n",
-    "nn_trainpredict_accuracy_matrix = np.zeros([len(hidden_layers), len(nodes_hlayer)])\n",
+    "nn_train_predict_accuracy_matrix = np.zeros([len(hidden_layers), len(nodes_hlayer)])\n",
     "\n",
     "for i in range(len(hidden_layers)):\n",
     "    for j in range(len(nodes_hlayer)):\n",
     "\n",
-    "        layer_output_sizes = [nodes_hlayer[j]] * hidden_layers[i] + [1]\n",
-    "        print(layer_output_sizes)\n",
-    "        activation_funcs = [ReLU]*i\n",
-    "        layers = create_layers_batch(network_input_size, layer_output_sizes)\n",
+    "        layer_output_sizes, activation_funcs = config_network(num_hidden_layers=hidden_layers[i],\n",
+    "                                                              num_nodes_hlayers=nodes_hlayer[j],\n",
+    "                                                              num_output_targets=1,\n",
+    "                                                              activation_func_hlayers=ReLU,\n",
+    "                                                              activation_func_output=ReLU)\n",
     "\n",
-    " \n",
+    "        layers = create_layers_batch(network_input_size, layer_output_sizes)\n",
+    "        \n",
+    "        \n",
+    "        cost_mse(input, layers, activation_funcs, t_train)\n",
+    "        \n",
+    "        layers_grad = gradient_func(inputs, layers, activation_funcs, targets)\n",
+    "\n",
     "        predictions = feed_forward_batch(inputs, layers, activation_funcs)\n",
     "\n",
     "        # accuracy = mean_squared_error(predictions, t_train)\n",
