--- a/Week41/exercises_week41_new.ipynb
+++ b/Week41/exercises_week41_new.ipynb
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 89,
    "id": "425f3bcc",
    "metadata": {},
    "outputs": [],
@@ -610,6 +610,11 @@
     "        print(np.shape(b))\n",
     "        z = a @ W + b\n",
     "        a = activation_func(z)\n",
+    "    print(len(layers))\n",
+    "    print(len(layers[0]))\n",
+    "    print(layers[0][0].shape)\n",
+    "    print(layers[0][1].shape)\n",
+    "    print(layers[0][1][0])\n",
     "    return a"
    ]
   },
@@ -623,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 90,
    "id": "ce6fcc2f",
    "metadata": {},
    "outputs": [
@@ -639,22 +644,28 @@
       "(1000, 10)\n",
       "(1000, 10)\n",
       "(10, 3)\n",
-      "(1000, 3)\n"
+      "(1000, 3)\n",
+      "3\n",
+      "2\n",
+      "(4, 12)\n",
+      "(1000, 12)\n",
+      "[-0.1053334   0.16618767  1.23281687  1.85958911  1.18698471  0.0272942\n",
+      " -0.64172241  1.72174857 -0.44996587 -0.82791309  0.08468724 -1.04486703]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[2.90184293e-13, 9.99999977e-01, 2.31428014e-08],\n",
-       "       [5.75611158e-18, 9.99797919e-01, 2.02080943e-04],\n",
-       "       [9.97330132e-12, 9.99998277e-01, 1.72319451e-06],\n",
+       "array([[9.99758291e-01, 1.35610822e-07, 2.41573642e-04],\n",
+       "       [9.99381090e-01, 1.79627382e-04, 4.39282384e-04],\n",
+       "       [9.99999960e-01, 3.96075794e-08, 1.19439400e-10],\n",
        "       ...,\n",
-       "       [1.07346005e-27, 1.00000000e+00, 7.51151859e-11],\n",
-       "       [1.35599976e-15, 1.00000000e+00, 2.42326806e-11],\n",
-       "       [4.37190641e-18, 1.48617577e-05, 9.99985138e-01]], shape=(1000, 3))"
+       "       [9.99944028e-01, 4.33828301e-05, 1.25895262e-05],\n",
+       "       [9.64654200e-01, 3.64669811e-11, 3.53458001e-02],\n",
+       "       [9.09175249e-01, 6.43156118e-02, 2.65091390e-02]], shape=(1000, 3))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 74,
    "id": "6bd4c148",
    "metadata": {},
    "outputs": [
@@ -821,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 75,
    "id": "ed3e2fc9",
    "metadata": {},
    "outputs": [],
@@ -869,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 76,
    "id": "5366d4ae",
    "metadata": {},
    "outputs": [
@@ -888,7 +899,10 @@
       "(150, 8)\n",
       "(150, 8)\n",
       "(8, 3)\n",
-      "(150, 3)\n"
+      "(150, 3)\n",
+      "(4, 4)\n",
+      "(150, 4)\n",
+      "[ 1.06348178  0.03712001 -0.16375793 -0.32820757]\n"
      ]
     },
     {
@@ -1046,7 +1060,7 @@
        "       [0.33141282, 0.33498242, 0.33360476]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 77,
    "id": "6c783105",
    "metadata": {},
    "outputs": [
@@ -1091,7 +1105,10 @@
       "(150, 8)\n",
       "(150, 8)\n",
       "(8, 3)\n",
-      "(150, 3)\n"
+      "(150, 3)\n",
+      "(4, 4)\n",
+      "(150, 4)\n",
+      "[ 1.06348178  0.03712001 -0.16375793 -0.32820757]\n"
      ]
     }
    ],
@@ -1101,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 78,
    "id": "c4b4c2ea",
    "metadata": {},
    "outputs": [
@@ -1260,7 +1277,7 @@
        "       [0.33141282, 0.33498242, 0.33360476]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1279,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 79,
    "id": "a2612b82",
    "metadata": {},
    "outputs": [
@@ -1297,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 80,
    "id": "e2650c26",
    "metadata": {},
    "outputs": [],
@@ -1334,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 81,
    "id": "f30e6e2c",
    "metadata": {},
    "outputs": [],
@@ -1370,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 82,
    "id": "56bef776",
    "metadata": {},
    "outputs": [],
@@ -1393,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 83,
    "id": "841c9e87",
    "metadata": {},
    "outputs": [
@@ -1412,7 +1429,10 @@
       "(150, 8)\n",
       "(150, 8)\n",
       "(8, 3)\n",
-      "(150, 3)\n"
+      "(150, 3)\n",
+      "(4, 4)\n",
+      "(150, 4)\n",
+      "Autograd ArrayBox with value [ 1.06348178  0.03712001 -0.16375793 -0.32820757]\n"
      ]
     }
    ],
@@ -1422,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 84,
    "id": "e928be60",
    "metadata": {},
    "outputs": [
@@ -1439,7 +1459,7 @@
        "       [ 0.38626251, -0.17716215, -0.21082067]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1458,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "6e4d38d3",
    "metadata": {},
    "outputs": [],
