Add text answers

--- a/Week48/exercises_week48.ipynb
+++ b/Week48/exercises_week48.ipynb
@@ -97,7 +97,7 @@
    "id": "f4711dda",
    "metadata": {},
    "source": [
-    "<u>**Answers:**</u> Differentiating the MSE cost function with respect to the parameters, $\\boldsymbol{\\theta}$ ...  positive definite ... seconde derivative"
+    "<u>**Answers:**</u> This is true. Twice differentiating the MSE cost function with respect to the parameters, $\\boldsymbol{\\theta}$, (i. e the Hessian matrix) result in the transpose of the feature matrix, times it self, times a positive factor. The product is then a symmetric matrix with all positive elements which is always positive semi definite. This is enough to say that the cost function must be convex."
    ]
   },
   {
@@ -125,7 +125,7 @@
    "id": "f5d27dcf",
    "metadata": {},
    "source": [
-    "<u>**Answers:**</u> "
+    "<u>**Answers:**</u> Logistic regression does not have an analytical closed-form solution. This is due to the cost function used, the binary cross entropy, which is not linear in the parameters (they appear as powers to the exponential function ) and we are not as fortunate as with OLS."
    ]
   },
   {
@@ -145,7 +145,7 @@
    "id": "7057219e",
    "metadata": {},
    "source": [
-    "<u>**Answers:**</u>"
+    "<u>**Answers:**</u> "
    ]
   },
   {
@@ -165,7 +165,7 @@
    "id": "10b9c9aa",
    "metadata": {},
    "source": [
-    "<u>**Answers:**</u>"
+    "<u>**Answers:**</u> For binary classification we want to separate the data into two classes, \"yes\"/\"no\", 1/0. In logistic regression the sigmoid function gives a value between 0 and 1 which can be taught of as the probability of the input belonging to the \"yes\" or 1 class.  "
    ]
   },
   {
@@ -203,7 +203,7 @@
    "id": "813e6d5e",
    "metadata": {},
    "source": [
-    "<u>**Answers:**</u> The loss surface of a deep neural network is not convex because ..."
+    "<u>**Answers:**</u> The loss surface of a deep neural network is not convex (with respect to the weights and biases). This is due to the nonlinear activation functions used at each layer like ReLU and sigmoid. "
    ]
   },
   {
@@ -223,7 +223,7 @@
    "id": "e7049f05",
    "metadata": {},
    "source": [
-    "<u>**Answers:**</u>"
+    "<u>**Answers:**</u> True. The sigmoid activation function return values between $0$ and $1$. The derivate of the sigmoid function resembles the shape of a somewhat wider normal distribution where the values at the peak is smaller than 1 and quickly approaches zero at the tails. With back propagation and the chain rule applied over many hidden layers, the derivatives are multiplied with each other as we move backwards layer by layer, and the small numerical value for each derivative can cause the gradient to approach zero. This will limit the training of the weights in the earlier layers."
    ]
   },
   {
@@ -243,7 +243,7 @@
    "id": "31e2bd9c",
    "metadata": {},
    "source": [
-    "<u>**Answers:**</u>"
+    "<u>**Answers:**</u> One way is to use activation functions that are not restricting the output and has a favorable derivative like the ReLU, which caps negative inputs at zero, work as a linear function for positive inputs, and has a derivative equal to 1."
    ]
   },
   {
@@ -266,7 +266,7 @@
    "id": "0e68fec7",
    "metadata": {},
    "source": [
-    "<u>**Answers:**</u>"
+    "<u>**Answers:**</u> For a given node in a given layer there are one weight per incoming feature/activation (nodes) in the previous layer. Thus at a given node there are as many weights as nodes in the previous. This times as many nodes in the current layer. There is one bias to be trained per layer."
    ]
   },
   {
@@ -326,7 +326,7 @@
    "id": "250e4874",
    "metadata": {},
    "source": [
-    "<u>**Answers:**</u>"
+    "<u>**Answers:**</u> Having a padding of $P = 1$ we frame the input with one row of zeros top and bottom, and one column of zeros on each side. With a stride size of 1, the center of the kernel will hit each of the pixels of the original input once, and since the kernel produce one output value through convolution for each stride the spatial dimension of the input is preserved."
    ]
   },
   {
@@ -447,7 +447,7 @@
    "id": "a8076574",
    "metadata": {},
    "source": [
-    "<u>**Answers:**</u>"
+    "<u>**Answers:**</u> BPTT is the process of of updating the weights and biases in an RNN. As the nodes in an RNN are interconnected layer wise, in a way that account for an sequential reliance in time"
    ]
   },
   {
@@ -472,8 +472,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
